[package]
name = "cnosdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"

[[bin]]
name = "cnosdb-meta"
path = "src/main.rs"

[[bin]]
name = "cnosdb-cli"
path = "src/main.rs"

[[bin]]
name = "inspect"
path = "src/main.rs"

[[bin]]
name = "cnosdb"
path = "src/main.rs"